--- a/userInterface/src/main/webapp/pages/css/screen.css
+++ b/userInterface/src/main/webapp/pages/css/screen.css
@@ -287,7 +287,7 @@ input[type=text]:focus, input[type=password]:focus, input.text:focus, input.titl
 input[type=text], input[type=password], input.text, input.title, textarea, select {
 	/*margin:0.1em 0 1.5em 0;*/
 	margin: 0px 0px 5px 0px;
-	border: 1px solid #7F9DB9;
+	/*border: 1px solid #7F9DB9;*/
 
 }
 input.text, input.title {
@@ -368,16 +368,20 @@ form.inline p {
 	width:150px;
 }
 .span-5 {
-	width:190px;
+    width:33%;
+	/*width:190px*/;
 }
 .span-6 {
 	width:230px;
 }
 .span-7 {
-	width:270px;
+    width:34%;
+	/*width:270px;*/
 }
 .span-8 {
-	width:310px;
+    padding-left:5px;
+    width:29%;
+	/*width:310px;*/
 }
 .span-9 {
 	width:350px;
@@ -407,7 +411,7 @@ form.inline p {
 	width:670px;
 }
 .span-18 {
-	width:710px;
+	width:92%
 }
 .span-19 {
 	width:750px;
@@ -419,13 +423,15 @@ form.inline p {
 	width:830px;
 }
 .span-22 {
-	width:870px;
+    margin-left:8px;
+    width:96%;
+	/*width:870px;*/
 }
 .span-23 {
 	width:910px;
 }
 .span-24 {
-	width:950px;
+	width:100%;
 	margin:0px;
 	padding:0;
 /*	float:right;*/
@@ -603,7 +609,8 @@ input.span-24, textarea.span-24 {
 	padding-left:320px;
 }
 .prepend-9 {
-	padding-left:360px;
+	padding-left:0;
+    text-align:center;
 }
 .prepend-10 {
 	padding-left:400px;
